--- a/style.css
+++ b/style.css
@@ -27,8 +27,9 @@ body {
 }
 
 .rate-box {
-  height: 40vh;
+  min-height: 340px;
   width: 90%;
+  max-width: 288px;
   background: var(--dark-blue);
   border-radius: 20px;
   padding: 1.5rem;
@@ -57,7 +58,7 @@ body {
 
 .rate-box p,
 .note {
-  margin-bottom: 2rem;
+  margin-bottom: 1.5rem;
 }
 
 .rate-box h1 {
@@ -73,12 +74,18 @@ body {
 
 .inner-rate-box {
   height: 100%;
+  position: absolute;
+  top:0;
+  left: 0;
+  padding: 2rem;
+  z-index: 10;
 }
 
 .inner-rate-box.submit {
   transition: .5s;
   opacity: 0;
   display: none;
+  z-index: -10;
 }
 
 .inner-submit-box {
@@ -86,6 +93,10 @@ body {
   flex-direction: column;
   text-align: center;
   opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 2rem;
 }
 
 .inner-submit-box.submit {
@@ -164,6 +175,7 @@ body {
   .rate-box {
     width: 20%;
     height: 50%;
+    max-height: 340px;
     padding: 2rem;
   }
 
@@ -178,11 +190,14 @@ body {
     height: 30px;
   }
 
-  .rate-box,
   .rate-box p,
   .rate-box h1,
   .note {
     margin-bottom: 1.5rem;
+  }
+
+  .inner-rate-box {
+    overflow: auto;
   }
 
   .inner-submit-box.submit img,
